add community service / controller, add sendRequest and member requests
